# TotalGBA

./: .gitignore  CMakeLists.txt  README.md  TotalGBA.sln  TotalGBA.vcxproj  TotalGBA.vcxproj.filters  meson.build
src/: CMakeLists.txt  gba.c  gba.h  internal.h  single.c  types.h
src/arm7tdmi/: arm7tdmi.c  arm7tdmi.h  barrel_shifter.c  barrel_shifter.h
src/arm7tdmi/arm/: arm.c  arm.h  block_data.c  block_data.h  branch.c  branch.h  data_processing.c  data_processing.h  halfword_and_signed_data.c  halfword_and_signed_data.h  psr_transfer.c  psr_transfer.h  single_data.c  single_data.h
src/arm7tdmi/thumb/: instructions.c  instructions.h  thumb.c  thumb.h
src/core/: dummy_main.cpp  gba.c  gba.h  internal.h  types.h
src/core/arm7tdmi/: arm7tdmi.c  arm7tdmi.h  barrel_shifter.h
src/core/arm7tdmi/arm/: arm_instruction_table.h  encoding_types.h  instruction_table.h  instructions.h  opcode_hash.h  unimplemented_instruction.h
src/core/arm7tdmi/arm/instructions/: arithmetic_data_processing.c  branch.c  branch_and_branch_with_link.c  branch_and_branch_with_link.h  data_processing_common.h  logical_data_processing.c  logical_data_processing.h  psr_transfer.c  single_data_transfer.c  undefined.c  unimplemented.c
src/core/arm7tdmi/thumb/: encoding_types.h  instruction_table.h  opcode_hash.h  thumb_instruction_table.h  unimplemented_instruction.h
src/core/mem/: common.h  mmio.c
src/core/mem/reads/: external_memory.h  general_interal_memory.h  internal_display_memory.h
src/core/mem/writes/: external_memory.h  general_interal_memory.h  internal_display_memory.h
src/core/util/: bit.h  string.c  string.h
src/mem/: mmio.c  mmio.h
src/mem/reads/: external_memory.c  external_memory.h  general_internal_memory.c  general_internal_memory.h  internal_display_memory.c  internal_display_memory.h
src/mem/writes/: external_memory.c  external_memory.h  general_internal_memory.c  general_internal_memory.h  internal_display_memory.c  internal_display_memory.h
src/ppu/: ppu.c  ppu.h
src/util/: bit.c  bit.h  string.c  string.h
tests/: CMakeLists.txt  test_romrunner.c
